Local changes pathogens portal netherlands
Local changes pathogens portal netherlands

--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -15,25 +15,25 @@
     <div class="vf-global-header">
       <div class="vf-global-header__inner">
         <a label="CV19-PORTAL" class="vf-logo__image" href="./index.html">
-          <img class="vf-logo__image" src="./images/CV19DP_logo_oneliner2.svg" alt="CV19-PORTAL">
+          <img class="vf-logo__image" src="./images/Pathogens-Portal-Logo-Netherlands-FINAL.png" alt="Pathogens Portal NL">
           <!-- <span class="vf-logo__text">Covid 19 Portal</span>-->
         </a>
         <nav class="vf-navigation vf-navigation--global vf-u-margin__top--800">
           <ul class="vf-navigation__list | vf-list--inline">
             <li class="vf-navigation__item">
-              <a href="./about.html" label="About" class="vf-navigation__link"> About Page</a>
+			  <a href="./about.html" label="About" class="vf-navigation__link"> About Page</a>
             </li>
             <li class="vf-navigation__item">
-              <a href="./ui_help.html" label="Link 1" class="vf-navigation__link"> UI Components</a>
+              <a href="./ui_help.html" label="Link 1" class="vf-navigation__link"> Tools</a>
             </li>
             <li class="vf-navigation__item">
-              <a href="./basic.html" label="Link 2" class="vf-navigation__link"> HTML page</a>
+              <a href="./basic.html" label="Link 2" class="vf-navigation__link"> FAQ</a>
             </li>
             <li class="vf-navigation__item">
-              <a href="#" class="vf-navigation__link" label="Link 3"> Link 3</a>
+              <a href="#" class="vf-navigation__link" label="Link 3"> Partners</a>
             </li>
             <li class="vf-navigation__item">
-              <a href="#"  label="Link 4" class="vf-navigation__link"> Link 4 </a>
+              <a href="#"  label="Link 4" class="vf-navigation__link"> Contact </a>
             </li>
           </ul>
         </nav>
@@ -50,21 +50,24 @@
         <nav  class="vf-navigation vf-navigation--main">
           <ul class="vf-navigation__list | vf-list--inline">
             <li class="vf-navigation__item">
-              <a label="Sub Nav 1" title="Sub Nav 1" href="#" class="vf-navigation__link">Sub-Nav 1</a>
+              <a label="Arboviruses in birds" title="Sub Nav 1" href="#" class="vf-navigation__link">Arboviruses in birds&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Sub Nav 2" title="Sub Nav 2" href="#" class="vf-navigation__link">Sub-Nav 2</a>
+              <a label="Arbovirus serology in birds" title="Sub Nav 2" href="#" class="vf-navigation__link">Arbovirus Serology raw data in birds&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Sub Nav 3" title="Sub Nav 2" href="#" class="vf-navigation__link">Sub-Nav 3</a>
+              <a label="Sequences" title="Sub Nav 3" href="#" class="vf-navigation__link">Sequences&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Sub Nav 4" title="Sub Nav 3" href="#" class="vf-navigation__link">Sub-Nav 4</a>
+              <a label="Isolates" title="Sub Nav 4" href="#" class="vf-navigation__link"> Isolates&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Sub Nav 5" title="Sub Nav 4" href="#" class="vf-navigation__link">Sub-Nav 5</a>
+              <a label="Samples" title="Sub Nav 5" href="#" class="vf-navigation__link">Samples&nbsp;&nbsp;&nbsp;</a>
             </li>
-          </ul>
+			<li class="vf-navigation__item">
+              <a label="Literature" title="Sub Nav 6" href="#" class="vf-navigation__link">Literature&nbsp;&nbsp;&nbsp;</a>
+            </li>
+		  </ul>
         </nav>
       </div>
     </section>
