--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -10,7 +10,7 @@
     <div class="vf-content vf-grid__col--span-2">
       <div class="vf-u-padding__top--400 vf-u-margin__bottom--400">&nbsp;</div>
       <p class="vf-lede">
-        Accelerating research through data sharing
+        <! -- Accelerating research through data sharing -->
       </p>
       <p></p>
     </div>
@@ -27,75 +27,75 @@
         <!-- Main blocks -->
         <article class="vf-summary vf-u-padding__right--600">
           <div class="vf-section-header">
-            <a label="Some Label" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Some Heading
+            <a label="arboviruses_in_birds" href="./arboviruses_in_birds.html" class="vf-section-header__heading vf-section-header__heading--is-link">
+              Arboviruses in birds
               <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum.</p>
-          <p><a label="Some Heading" href="#" class="vf-link">000 records ></a></p>
+          <p class="vf-summary__text">Arbovirus PCR test and Serology results.</p>
+          <p><a label="Arbovirus PCR test and Serology results" href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1505?key=4d19e4bf-bacf-4e47-b4a1-8d1cf48d88bd" class="vf-link">3 studies ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
           <div class="vf-section-header">
-            <a label="Some Label" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Some Heading
+            <a label="Arbovirus Serology raw data in birds" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
+              Arbovirus Serology raw data in birds
               <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum.</p>
-          <p><a label="Some Heading" href="#" class="vf-link">000 records ></a></p>
+          <p class="vf-summary__text">Protein microarray and FRNT results.</p>
+          <p><a label="0 records" href="#" class="vf-link">0 records ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
           <div class="vf-section-header">
-            <a label="Some Label" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Some Heading
+            <a label="sequences" href="./sequences.html"class="vf-section-header__heading vf-section-header__heading--is-link">
+              Sequences
               <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum.</p>
-          <p><a label="Some Heading" href="#" class="vf-link">000 records ></a></p>
+          <p class="vf-summary__text">USUV sequences.</p>
+          <p><a label="119 records" href="#" class="vf-link">119 records ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
           <div class="vf-section-header">
-            <a label="Some Label" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Some Heading
+            <a label="Isolates" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
+              Isolates
               <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum.</p>
-          <p><a label="Some Heading" href="#" class="vf-link">000 records ></a></p>
+          <p class="vf-summary__text">Viral isolates.</p>
+          <p><a label="0 records" href="#" class="vf-link">0 records ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
           <div class="vf-section-header">
-            <a label="Some Label" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Some Heading
+            <a label="Samples" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
+              Samples
               <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum.</p>
-          <p><a label="Some Heading" href="#" class="vf-link">000 records ></a></p>
+          <p class="vf-summary__text">Sample biobank.</p>
+          <p><a label="0 records" href="#" class="vf-link">0 records ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
           <div class="vf-section-header">
-            <a label="Some Label" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Some Heading
+            <a label="Literature" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
+              Literature
               <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum.</p>
-          <p><a label="Some Heading" href="#" class="vf-link">000 records ></a></p>
+          <p class="vf-summary__text">A contextual database of mosquito data collection in Europe readily usable for risk assessment and MBD modeling.</p>
+          <p><a label="0 records" href="#" class="vf-link">0 records ></a></p>
         </article>
       </div>
     </div>
@@ -104,35 +104,34 @@
       <h2 class="vf-links__heading">About this portal</h2>
       <article class="vf-summary vf-summary--publication">
         <p class="vf-box__text vf-text-body--2">
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
-          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla.</p>
+          The Pathogens Portal Netherlands provides information about available datasets, resources, tools, and services related to pandemic preparedness in the Netherlands.</p>
       </article>
       <section class="vf-card-container">
         <div class="vf-card-container__inner">
           <article class="vf-card vf-card-normal">
-            <a class="vf-card__link" label="Help use make the portal better" href="#">
+            <a class="vf-card__link" label="One Health Pact Mosquito Alert interactive map" href="https://map.mosquitoalert.com/en">
               <img src="./images/participate-image.png" alt="" class="vf-card__image" loading="lazy">
             </a>
             <div class="vf-card__content">
               <h3 class="vf-card__title">
-                <a class="vf-card__link" label="Help make the portal better" href="#">Help make the portal better</a>
+                <a class="vf-card__link" label="One Health Pact Mosquito Alert interactive map" href="https://map.mosquitoalert.com/en">One Health Pact Mosquito Alert interactive map</a>
               </h3>
-              <p class="vf-card__text">Are you a researcher working with COVID-19 data? We would like to hear your feedback on this portal and the presentation of the data you are interested in.</p>
+              <p class="vf-card__text">Mosquito Alert is a non-profit cooperative citizen science project, coordinated by different public research centers. The goal is to study, monitor, and fight the spread of invasive mosquitoes capable of transmitting global diseases such as dengue, Zika, or West Nile fever. The tiger mosquito and the yellow fever mosquito are some of the invasive species that Mosquito Alert watches out for.</p>
               <a label="Sign up to participate" href="#" class="vf-link">Sign up to participate ></a>
             </div>
           </article>
         </div>
       </section>
       <div class="vf-component__container">
-        <a label="Share new COVID-19 data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--red--dark">
-          <h3 class="vf-box__heading">Share new COVID-19 data  ></h3>
+        <a label="Share new COVID-19 data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--red--dark" href="mailto:submitdata@pathogensportal.nl">
+          <h3 class="vf-box__heading">Share new pathogens data  ></h3> 
           <p class="vf-box__text vf-text-body--2">Contact our curator teams, who will assist you with submitting your data to EMBL-EBI repositories ></p>
         </a>
       </div>
     </div>
   </div>
-  <!-- Examples -->
-  @@include('./examples.html')
+  <!-- Examples 
+  @@include('./examples.html')-->
 </div>
 <!-- end main content -->
 
