--- a/src/pages/arboviruses_in_birds.html
+++ b/src/pages/arboviruses_in_birds.html
@@ -7,21 +7,22 @@
 	</div>-->
 
 <div class="vf-content">
-	<img src="./images/CV19DP_banner subpage.jpg" style="width:100%">
+	<img src="./images/CV19DP_banner subpage arbo.jpg" style="width:100%">
 	<br>
 	<br>
 	<br>
 	<h3>Surveillance for arboviruses in birds in the Netherlands, 2016-2022</h3>
-	<p>Placeholder for Reina et al. to provide a descriptive text for this section.</p>
+	<p>Content Overview: Information on date and location of sampling, birds species and molecular and serological testing results for Usutu virus (USUV) and (WNV).</p>
 
 	<!-- empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
 <br>
 	<h4>Available Data</h2>
 	
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1505?key=4d19e4bf-bacf-4e47-b4a1-8d1cf48d88bd12">Surveillance for arboviruses in birds in captivity in the Netherlands, 2016-2022</a></h4>
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1522?key=d66d1a4c-64ee-4343-aa07-de67e771f67d05">Surveillance for arboviruses in free ranging live birds in the Netherlands, 2016-2022</a></h4>
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1523?key=dfe9760f-c10e-48e5-8f81-22a49662674a82">Surveillance for arboviruses in free ranging dead birds in the Netherlands, 2016-2022</a></h4>
-	
+	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1505?key=4d19e4bf-bacf-4e47-b4a1-8d1cf48d88bd">Surveillance for arboviruses in birds in captivity in the Netherlands, 2016-2022</a></h4>
+	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1522?key=d66d1a4c-64ee-4343-aa07-de67e771f67d">Surveillance for arboviruses in free ranging live birds in the Netherlands, 2016-2022</a></h4>
+	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1523?key=dfe9760f-c10e-48e5-8f81-22a49662674a">Surveillance for arboviruses in free ranging dead birds in the Netherlands, 2016-2022</a></h4>
+	<br>
+	<br>
 	<!-- <ul>
 		<li>Et tortor consequat id porta</li>
 		<li>At ultrices mi tempus imperdiet nulla</li>
