--- a/src/pages/header.html
+++ b/src/pages/header.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>COVID-19 Data Portal</title>
+  <title>Pathogens Portal Netherlands</title>
   <!--  
     <base href="https://visual-framework.github.io/vf-covid19-boilerplate/">
   -->
@@ -20,20 +20,25 @@
         </a>
         <nav class="vf-navigation vf-navigation--global vf-u-margin__top--800">
           <ul class="vf-navigation__list | vf-list--inline">
-            <li class="vf-navigation__item">
-			  <a href="./about.html" label="About" class="vf-navigation__link"> About Page</a>
+            
+			 <li class="vf-navigation__item">
+			  <a href="./arboviruses.html" label="About" class="vf-navigation__link"> Back</a>
             </li>
             <li class="vf-navigation__item">
-              <a href="./ui_help.html" label="Link 1" class="vf-navigation__link"> Tools</a>
+			<li class="vf-navigation__item">
+			  <a href="./about.html" label="About" class="vf-navigation__link"> About</a>
+            </li>
+            <li class="vf-navigation__item">
+             <!-- <a href="./ui_help.html" label="Link 1" class="vf-navigation__link"> Tools</a>
             </li>
             <li class="vf-navigation__item">
               <a href="./basic.html" label="Link 2" class="vf-navigation__link"> FAQ</a>
             </li>
             <li class="vf-navigation__item">
               <a href="#" class="vf-navigation__link" label="Link 3"> Partners</a>
-            </li>
+            </li>-->
             <li class="vf-navigation__item">
-              <a href="#"  label="Link 4" class="vf-navigation__link"> Contact </a>
+              <a href="mailto:info@pathogensportal.nl"  label="Contact" class="vf-navigation__link">Contact </a>
             </li>
           </ul>
         </nav>
@@ -50,22 +55,22 @@
         <nav  class="vf-navigation vf-navigation--main">
           <ul class="vf-navigation__list | vf-list--inline">
             <li class="vf-navigation__item">
-              <a label="Arboviruses in birds" title="Sub Nav 1" href="#" class="vf-navigation__link">Arboviruses in birds&nbsp;&nbsp;&nbsp;</a>
+              <a label="Arboviruses in birds" title="Sub Nav 1" href="./arboviruses_in_birds.html" class="vf-navigation__link">Arboviruses in birds&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Arbovirus serology in birds" title="Sub Nav 2" href="#" class="vf-navigation__link">Arbovirus Serology raw data in birds&nbsp;&nbsp;&nbsp;</a>
+              <a label="Arbovirus serology in birds" title="Sub Nav 2" href="#" class="vf-navigation__link">Arbovirus Serology raw data in birds&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Sequences" title="Sub Nav 3" href="#" class="vf-navigation__link">Sequences&nbsp;&nbsp;&nbsp;</a>
+              <a label="Sequences" title="Sub Nav 3" href="./sequences.html" class="vf-navigation__link">Sequences&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Isolates" title="Sub Nav 4" href="#" class="vf-navigation__link"> Isolates&nbsp;&nbsp;&nbsp;</a>
+              <a label="Isolates" title="Sub Nav 4" href="#" class="vf-navigation__link"> Isolates&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
             <li class="vf-navigation__item">
-              <a label="Samples" title="Sub Nav 5" href="#" class="vf-navigation__link">Samples&nbsp;&nbsp;&nbsp;</a>
+              <a label="Samples" title="Sub Nav 5" href="#" class="vf-navigation__link">Samples&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
 			<li class="vf-navigation__item">
-              <a label="Literature" title="Sub Nav 6" href="#" class="vf-navigation__link">Literature&nbsp;&nbsp;&nbsp;</a>
+              <a label="Literature" title="Sub Nav 6" href="./literature.html" class="vf-navigation__link">Literature&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</a>
             </li>
 		  </ul>
         </nav>
