--- a/src/pages/literature.html
+++ b/src/pages/literature.html
@@ -11,23 +11,24 @@
 	<br>
 	<br>
 	<br>
-	<h3>Genomic sequences of Usutu viruses (USUV) obtained from: free ranging dead birds, free ranging live birds and dead captive birds in the time period 2016-2022</h3>
-	<p>Information on date of death and sampling, location, birds species and molecular testing results for Usutu virus (USUV).</p>
+	<!-- <h3>Genomic sequences of Usutu viruses (USUV) obtained from: free ranging dead birds, free ranging live birds and dead captive birds in the time period 2016-2022</h3>
+	<p>Placeholder for Reina et al. to provide a descriptive text for this section.</p>
 
-	<!-- empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
+	empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
 <br>
-	<h4>Available Data</h4>
-	
-	<h4><a href="https://www.ebi.ac.uk/ena/browser/view/MN122145-MN122256">Genomic sequences of Usutu viruses (USUV) obtained from free ranging dead birds (112 records)</a></h4>
+	<h3>1.Introduction</h3>
+	<p>We present here a dataset resulting from a systematic literature review, executed in 2024. The dataset includes bird species with serological and/or molecular evidence of West Nile virus (WNV) and Usutu virus (USUV) infections. The dataset on bird species that serve as hosts for WNV and USUV is presented in an Excel file. This file consists of three spreadsheets named:
+
+extracted_data: contains data extracted from the reviewed paper or thesis, as well as included variables
+cut_off: describes cutoff for positivity in research papers describing serological results
+metadata: defines the variables included in the first sheet
+overview_geographic_regions: a map highlighting geographic regions that were part of the literature review.</p>
 	<br>
-	<h4>Genomic sequences of Usutu viruses (USUV) obtained from free ranging Live birds (3 records):</h4>
-	<h4><a href="https://www.ebi.ac.uk/ena/browser/view/OP921076">https://www.ebi.ac.uk/ena/browser/view/OP921076</a></h4>
-	<h4><a href="https://www.ebi.ac.uk/ena/browser/view/OP921083">https://www.ebi.ac.uk/ena/browser/view/OP921083</a></h4>
-	<h4><a href="https://www.ebi.ac.uk/ena/browser/view/OP921078">https://www.ebi.ac.uk/ena/browser/view/OP921078</a></h4>
+	<h3>2. A literature-based dataset of bird species hosts of or susceptible to MDBs</h3>
+	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1630?key=1e0acd4d-1da3-4da2-8875-37f4e8da8dbc">Link to literature-based dataset ></a></h4>
 	<br>
-	<h4>Genomic sequences of Usutu viruses (USUV) obtained from dead captive birds (4 records):</h4>
-	<h4><a href="https://www.ebi.ac.uk/ena/browser/view/OR573992-OR573993">https://www.ebi.ac.uk/ena/browser/view/OR573992-OR573993</a></h4>
-	<h4><a href="https://www.ebi.ac.uk/ena/browser/view/MK796168-MK796169">https://www.ebi.ac.uk/ena/browser/view/MK796168-MK796169</a></h4>
+	<h3>3. Europe PMC advanced literature search</h3>
+	<h4><a href="https://europepmc.org/betaAdvanceSearch">https://europepmc.org/betaAdvanceSearch ></a></h4>
 	<br>
 	<br>
 	<br>
