--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -1,138 +1,137 @@
-@@include('./header.html')
 
-<!-- Banner -->
-@@include('./banner.html')
+@@include('./header - landing page.html')
 
-<!-- Display if Search is false -->
-<section class="vf-body vf-u-padding__top--400 vf-u-padding__bottom--0 hero">
-  <!-- Display if Hero is default -->
-  <div class="vf-grid vf-grid__col-3">
-    <div class="vf-content vf-grid__col--span-2">
-      <div class="vf-u-padding__top--400 vf-u-margin__bottom--400">&nbsp;</div>
-      <p class="vf-lede">
-        <! -- Accelerating research through data sharing -->
-      </p>
-      <p></p>
+
+<br>
+<br>
+<br>
+<p>Pathogens Portal Netherlands provides information about available datasets, resources, tools and services related to pathogens research in the Netherlands.  This portal is complimentary to the Pathogens Portal (Pathogens) with the aim to showcase and provide quick access to a collection of biomolecular and other pathogen related data for open science from Dutch institutions and collaborations .  The first datasets that are made available are from Arboviruses, with others like Mpox to follow. We encourages Dutch researchers to share their data in compliance with the FAIR Data Principles, which promote the Findability, Accessibility, Interoperability, and Reusability of data, using publicly accessible and FAIR digital repositories . See more details under the section “Share Data”. For more questions regarding data sharing via this portal contact info@pathogensportal.nl.</p>
+
+<!--<div class="vf-body">
+  <section class="vf-intro | embl-grid embl-grid--has-centered-content vf-u-margin__top--800 vf-u-margin__bottom--600">
+    <!--<div> empty </div>
+    <div>
+      <p id="page-intro" class="vf-intro__text"></p>
     </div>
-    <div class="vf-content vf-grid__col--span-1">
-    </div>
-  </div>
-</section>
+  </section>
+<!-- Main intro   <hr>
+  <section class="vf-summary-container | embl-grid embl-grid--has-centered-content">
+    <div class="vf-section-header">
+      <h2 class="vf-section-header__heading">Arboviruses</h2>
+    </div>-->
 
-<!-- Main intro -->
-<div class="vf-body">
+	<!-- Main intro -->
+<hr>
+	<div class="vf-body">
   <div class="vf-grid | vf-grid__col-3 vf-grid--has-sidebar vf-u-margin__top--800">
     <div class="vf-container__content vf-content vf-grid__col--span-2">
       <div class="vf-grid | vf-grid__col-2">
         <!-- Main blocks -->
         <article class="vf-summary vf-u-padding__right--600">
-          <div class="vf-section-header">
-            <a label="arboviruses_in_birds" href="./arboviruses_in_birds.html" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Arboviruses in birds
+       
+
+
+	   <div class="vf-section-header">
+            <a label="arboviruses" href="./arboviruses.html" class="vf-section-header__heading vf-section-header__heading--is-link">
+              Arboviruses
               <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Arbovirus PCR test and Serology results.</p>
-          <p><a label="Arbovirus PCR test and Serology results" href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1505?key=4d19e4bf-bacf-4e47-b4a1-8d1cf48d88bd" class="vf-link">3 studies ></a></p>
+          <p class="vf-summary__text">Pathogens Portal Netherlands - Arboviruses page. </p>
+           <a label="CV19-PORTAL" class="vf-logo__image" href="./arboviruses.html">
+          <img width="600" src="./images/CV19DP_banner subpage.jpg" alt="Pathogens Portal NL">
         </article>
-        <article class="vf-summary vf-u-padding__right--600">
+        <!-- Main blocks <article class="vf-summary vf-u-padding__right--600">
           <div class="vf-section-header">
             <a label="Arbovirus Serology raw data in birds" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Arbovirus Serology raw data in birds
+              MPOX
               <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">Protein microarray and FRNT results.</p>
-          <p><a label="0 records" href="#" class="vf-link">0 records ></a></p>
-        </article>
-        <article class="vf-summary vf-u-padding__right--600">
-          <div class="vf-section-header">
-            <a label="sequences" href="./sequences.html"class="vf-section-header__heading vf-section-header__heading--is-link">
-              Sequences
-              <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
-              </svg>
-            </a>
-          </div>
-          <p class="vf-summary__text">USUV sequences.</p>
-          <p><a label="119 records" href="#" class="vf-link">119 records ></a></p>
-        </article>
-        <article class="vf-summary vf-u-padding__right--600">
-          <div class="vf-section-header">
-            <a label="Isolates" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Isolates
-              <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
-              </svg>
-            </a>
-          </div>
-          <p class="vf-summary__text">Viral isolates.</p>
-          <p><a label="0 records" href="#" class="vf-link">0 records ></a></p>
-        </article>
-        <article class="vf-summary vf-u-padding__right--600">
-          <div class="vf-section-header">
-            <a label="Samples" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Samples
-              <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
-              </svg>
-            </a>
-          </div>
-          <p class="vf-summary__text">Sample biobank.</p>
-          <p><a label="0 records" href="#" class="vf-link">0 records ></a></p>
-        </article>
-        <article class="vf-summary vf-u-padding__right--600">
-          <div class="vf-section-header">
-            <a label="Literature" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
-              Literature
-              <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
-                <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
-              </svg>
-            </a>
-          </div>
-          <p class="vf-summary__text">A contextual database of mosquito data collection in Europe readily usable for risk assessment and MBD modeling.</p>
-          <p><a label="0 records" href="#" class="vf-link">0 records ></a></p>
-        </article>
-      </div>
-    </div>
-    <!-- Right "sidebar" -->
-    <div class="vf-container__content vf-content vf-grid__col--span-1">
-      <h2 class="vf-links__heading">About this portal</h2>
-      <article class="vf-summary vf-summary--publication">
-        <p class="vf-box__text vf-text-body--2">
-          The Pathogens Portal Netherlands provides information about available datasets, resources, tools, and services related to pandemic preparedness in the Netherlands.</p>
-      </article>
-      <section class="vf-card-container">
-        <div class="vf-card-container__inner">
-          <article class="vf-card vf-card-normal">
-            <a class="vf-card__link" label="One Health Pact Mosquito Alert interactive map" href="https://map.mosquitoalert.com/en">
-              <img src="./images/participate-image.png" alt="" class="vf-card__image" loading="lazy">
-            </a>
-            <div class="vf-card__content">
-              <h3 class="vf-card__title">
-                <a class="vf-card__link" label="One Health Pact Mosquito Alert interactive map" href="https://map.mosquitoalert.com/en">One Health Pact Mosquito Alert interactive map</a>
-              </h3>
-              <p class="vf-card__text">Mosquito Alert is a non-profit cooperative citizen science project, coordinated by different public research centers. The goal is to study, monitor, and fight the spread of invasive mosquitoes capable of transmitting global diseases such as dengue, Zika, or West Nile fever. The tiger mosquito and the yellow fever mosquito are some of the invasive species that Mosquito Alert watches out for.</p>
-              <a label="Sign up to participate" href="#" class="vf-link">Sign up to participate ></a>
-            </div>
-          </article>
-        </div>
-      </section>
-      <div class="vf-component__container">
-        <a label="Share new COVID-19 data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--red--dark" href="mailto:submitdata@pathogensportal.nl">
-          <h3 class="vf-box__heading">Share new pathogens data  ></h3> 
-          <p class="vf-box__text vf-text-body--2">Contact our curator teams, who will assist you with submitting your data to EMBL-EBI repositories ></p>
+	
+	
+    <div class="vf-section-content">
+      <article class="vf-summary">
+        <p class="vf-summary__text">Will be made available in Q1 2025.</P>
+		<br>
+		<P>Click on the image below to go to the Arboviruses page:</p>
+ <a label="CV19-PORTAL" class="vf-logo__image" href="./index arbo.html">
+          <img width="600" src="./images/CV19DP_banner subpage.jpg" alt="Pathogens Portal NL">
+          <!-- <span class="vf-logo__text">Covid 19 Portal</span>-->
         </a>
-      </div>
+<br>
+<br>
+		<!--         <figure class="vf-figure">
+          <a href="./images/CV19DP_banner subpage.jpg"><img src="{{section.img.url}}" title="ome" alt="some img title"></a>
+        </figure>-->
+      </article>
     </div>
+  </section>
   </div>
-  <!-- Examples 
-  @@include('./examples.html')-->
-</div>
-<!-- end main content -->
 
-@@include('./footer.html')
+<!--  
+    <base href="https://visual-framework.github.io/vf-covid19-boilerplate/">
+ 
+  <section class="vf-summary-container | embl-grid embl-grid--has-centered-content">
+    <div class="vf-section-header">
+      <h2 class="vf-section-header__heading">Section B</h2>
+    </div>
+
+    <div class="vf-section-content">
+      <article class="vf-summary">
+        <p class="vf-summary__text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla</p>
+        <figure class="vf-figure">
+          <a href="#"><img src="{{section.img.url}}" title="some img title" alt="some img title"></a>
+        </figure>
+      </article>
+    </div>
+  </section>
+
+  <section class="vf-summary-container | embl-grid embl-grid--has-centered-content">
+    <div class="vf-section-header">
+      <h2 class="vf-section-header__heading">Section C</h2>
+    </div>
+
+    <div class="vf-section-content">
+      <article class="vf-summary">
+        <p class="vf-summary__text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla</p>
+        <figure class="vf-figure">
+          <a href="#"><img src="{{section.img.url}}" title="some img title" alt="some img title"></a>
+        </figure>
+      </article>
+    </div>
+  </section>
+
+  <section class="vf-summary-container | embl-grid embl-grid--has-centered-content">
+    <div class="vf-section-header">
+      <h2 class="vf-section-header__heading">Section D</h2>
+    </div>
+
+    <div class="vf-section-content">
+      <article class="vf-summary">
+        <p class="vf-summary__text"> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla.  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum iaculis est vel tempus. Sed condimentum dolor sit amet hendrerit rutrum. Quisque faucibus gravida massa non convallis.
+          Etiam rhoncus neque eget mollis ultrices. Curabitur auctor lectus et pretium fringilla. Phasellus dignissim enim et leo cursus fringilla</p>
+        <figure class="vf-figure">
+          <a href="#"><img src="{{section.img.url}}" title="some img title" alt="some img title"></a>
+        </figure>
+      </article>
+    </div>
+  </section>
+</div>
+ -->
+</div>
+<hr>
+
+ @@include('./footer.html')
