--- a/src/pages/arboviruses.html
+++ b/src/pages/arboviruses.html
@@ -3,21 +3,23 @@
 <!-- Banner -->
 @@include('./banner.html')
 
-<!-- Display if Search is false -->
+<!-- Display if Search is false 
 <section class="vf-body vf-u-padding__top--400 vf-u-padding__bottom--0 hero">
   <!-- Display if Hero is default -->
-  <div class="vf-grid vf-grid__col-3">
+  <!-- Display if Hero is default  <div class="vf-grid vf-grid__col-3">
     <div class="vf-content vf-grid__col--span-2">
       <div class="vf-u-padding__top--400 vf-u-margin__bottom--400">&nbsp;</div>
       <p class="vf-lede">
-        <! -- Accelerating research through data sharing -->
+        <! -- Accelerating research through data sharing 
       </p>
       <p></p>
     </div>
     <div class="vf-content vf-grid__col--span-1">
     </div>
   </div>
-</section>
+</section>--> 
+<div class="vf-content">
+	<img src="./images/CV19DP_banner subpage arbo.jpg" style="width:100%">
 
 <!-- Main intro -->
 <div class="vf-body">
@@ -94,8 +96,8 @@
               </svg>
             </a>
           </div>
-          <p class="vf-summary__text">A contextual database of mosquito data collection in Europe readily usable for risk assessment and MBD modeling.</p>
-          <p><a label="0 records" href="#" class="vf-link">1 literature-based dataset  ></a></p>
+          <p class="vf-summary__text">A literature-based dataset of bird species hosts of or susceptible to MDBs.</p>
+          <p><a label="1 record" href="./literature.html" class="vf-link">1 literature-based dataset  ></a></p>
         </article>
       </div>
     </div>
