--- a/src/pages/literature.html
+++ b/src/pages/literature.html
@@ -7,6 +7,7 @@
 	</div></-->
 
 <div class="vf-content">
+<a href="./arboviruses.html">
 <img src="./images/CV19DP_banner subpage.jpg" style="width:100%">
 	<br>
 	<br>
