Large iteration after testing
Large iteration after testing:
- Acknowledgement statement
- Addition sequencing data
-Isolates data
- Samples page
- Updates nextstrain link

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -5,20 +5,23 @@
 <p>
 
 <h3>Vision</h3>
-Rapid and open pathogen data sharing is essential to advance research and drive effective surveillance activities. Access to comprehensive data, including genomic sequences, epidemiological information, and clinical data, empowers researchers to track the spread and evolution of pathogens in real-time. This transparency is particularly critical for studying emerging viruses, food-borne pathogens, and antimicrobial-resistant bacteria, which pose significant and complex threats to public health.
+<p>Rapid and open pathogen data sharing is essential to advance research and drive effective surveillance activities. Access to comprehensive data, including genomic sequences, epidemiological information, and clinical data, empowers researchers to track the spread and evolution of pathogens in real-time. This transparency is particularly critical for studying emerging viruses, food-borne pathogens, and antimicrobial-resistant bacteria, which pose significant and complex threats to public health.
 
-A One Health approach, which integrates human, animal, and environmental health perspectives, is crucial in addressing these challenges. By facilitating the sharing of diverse data types across disciplines, this approach promotes a holistic understanding of pathogen dynamics and fosters coordinated research efforts to develop innovative solutions. Rapid and open data sharing not only enhances our ability to respond swiftly to health crises but also accelerates scientific discovery and strengthens global health security and preparedness.
-<br>
-<br>
+A One Health approach, which integrates human, animal, and environmental health perspectives, is crucial in addressing these challenges. By facilitating the sharing of diverse data types across disciplines, this approach promotes a holistic understanding of pathogen dynamics and fosters coordinated research efforts to develop innovative solutions. Rapid and open data sharing not only enhances our ability to respond swiftly to health crises but also accelerates scientific discovery and strengthens global health security and preparedness.<p>
 <h3>Aims</h3>
-The Pathogens Portal Netherlands was developed to support researchers in realizing this vision, by notably:
+<p>The Pathogens Portal Netherlands was developed to support researchers in realizing this vision, by notably:
 
 Providing a one-stop resource for all Dutch pathogen data and projects.
 Fostering collaborations and synergies by creating a forum for discussion.
 Providing documentation and training material on FAIR research data management, especially for pathogen omics data.
-Showcasing Dutch resources that contribute to pathogen data sharing, access, analysis, and interpretation.
+Showcasing Dutch resources that contribute to pathogen data sharing, access, analysis, and interpretation.</p>
+<h3>Acknowledgement</h3>
+<p>All publications using data or other content from Pathogens Portal Netherlands should include an acknowledgement to show that services of this portal: www.pathogensportal.nl**  have been used. Where datasets were used to conduct research, please acknowledge the original authors and their primary publications that are associated with the datasets. **add SciCrunch registry identifier
 </p>
-
+<br>
+<br>
+<br>
+<br>
 <!-- <div class="vf-body">
   <section class="vf-intro | embl-grid embl-grid--has-centered-content vf-u-margin__top--800 vf-u-margin__bottom--600">
     <div><!-- empty </div>
