--- a/src/pages/arboviruses.html
+++ b/src/pages/arboviruses.html
@@ -61,11 +61,11 @@
             </a>
           </div>
           <p class="vf-summary__text">USUV sequences.</p>
-          <p><a label="119 records" href="./sequences.html" class="vf-link">119 records ></a></p>
+          <p><a label="128 records" href="./sequences.html" class="vf-link">128 records ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
           <div class="vf-section-header">
-            <a label="Isolates" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
+            <a label="Isolates" href="./isolates.html" class="vf-section-header__heading vf-section-header__heading--is-link">
               Isolates
               <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
@@ -73,11 +73,11 @@
             </a>
           </div>
           <p class="vf-summary__text">Viral isolates.</p>
-          <p><a label="0 records" href="#" class="vf-link">0 records ></a></p>
+          <p><a label="0 records" href="./isolates.html" class="vf-link">3 viral isolates ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
           <div class="vf-section-header">
-            <a label="Samples" href="#" class="vf-section-header__heading vf-section-header__heading--is-link">
+            <a label="Samples" href="./samples.html" class="vf-section-header__heading vf-section-header__heading--is-link">
               Samples
               <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
@@ -85,7 +85,7 @@
             </a>
           </div>
           <p class="vf-summary__text">Sample biobank.</p>
-          <p><a label="0 records" href="#" class="vf-link">0 records ></a></p>
+          <p><a label="30495 samples" href="./samples.html" class="vf-link">30495 samples ></a></p>
         </article>
         <article class="vf-summary vf-u-padding__right--600">
           <div class="vf-section-header">
@@ -98,6 +98,19 @@
           </div>
           <p class="vf-summary__text">A literature-based dataset of bird species hosts of or susceptible to MDBs.</p>
           <p><a label="1 record" href="./literature.html" class="vf-link">1 literature-based dataset  ></a></p>
+        </article>
+		<article class="vf-summary vf-u-padding__right--600">
+          <div class="vf-section-header">
+            <a label="Literature" href="./survey.html" class="vf-section-header__heading vf-section-header__heading--is-link">
+              MosquitoWise survey
+              <svg aria-hidden="true" class="vf-section-header__icon | vf-icon vf-icon-arrow--inline-end" width="24" height="24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 12c0 6.627 5.373 12 12 12s12-5.373 12-12S18.627 0 12 0C5.376.008.008 5.376 0 12zm13.707-5.209l4.5 4.5a1 1 0 010 1.414l-4.5 4.5a1 1 0 01-1.414-1.414l2.366-2.367a.25.25 0 00-.177-.424H6a1 1 0 010-2h8.482a.25.25 0 00.177-.427l-2.366-2.368a1 1 0 011.414-1.414z" fill="" fill-rule="nonzero"></path>
+              </svg>
+            </a>
+          </div>
+          <p class="vf-summary__text">The purpose of this survey is to better understand your knowledge and perceptions of mosquitoes and mosquito-borne viruses in Europe. 
+</p>
+          <!--<p><a label="1 record" href="./literature.html" class="vf-link">1 literature-based dataset  ></a></p>-->
         </article>
       </div>
     </div>
@@ -163,14 +176,14 @@
 	    <section class="vf-card-container">
         <div class="vf-card-container__inner">
           <article class="vf-card vf-card-normal">
-            <a class="vf-card__link" label="Real-time tracking of Zika virus evolution" href="https://nextstrain.org/zika">
+            <a class="vf-card__link" label="Real-time tracking of Global West Nile virus evolution in the Netherlands" href="https://nextstrain.org/community/grubaughlab/WNV-Global?f_country=Netherlands">
               <img src="https://www.digitalengineering247.com/images/article/nextstrain_rectangular.jpg" alt="" class="vf-card__image" loading="lazy">
             </a>
             <div class="vf-card__content">
               <h3 class="vf-card__title">
-                <a class="vf-card__link" label="Real-time tracking of Zika virus evolution" href="https://nextstrain.org/zika">Real-time tracking of Zika virus evolution</a>
+                <a class="vf-card__link" label="Real-time tracking of Global West Nile virus evolution in the Netherlands" href="https://nextstrain.org/community/grubaughlab/WNV-Global?f_country=Netherlands">WNV Nextstrain dashboard</a>
               </h3>
-              <p class="vf-card__text">Real-time tracking of Zika virus evolution</p>
+              <p class="vf-card__text">Real-time tracking of Global West Nile virus evolution in the Netherlands</p>
               <!--<a label="Sign up to participate" href="#" class="vf-link">Sign up to participate ></a>-->
             </div>
           </article>
