--- a/src/pages/isolates.html
+++ b/src/pages/isolates.html
@@ -12,16 +12,16 @@
 	<br>
 	<br>
 	<br>
-	<h3>Introduction arboviruses in wild birds</h3>
-	<p>Surveillance for arboviruses in birds in the Netherlands, 2016-2022. Content Overview: Information on date and location of sampling, birds species and molecular and serological testing results for Usutu virus (USUV) and (WNV).</p>
+	<h4>Introduction viral isolates</h4>
+	<p>These viral isolates below are produced by Erasmus MC and available via the Euopean virus archive.</p>
 
 	<!-- empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
 <br>
-	<h4>Available Data</h2>
+	<h4>Available viral isolates</h2>
 	
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1505?key=4d19e4bf-bacf-4e47-b4a1-8d1cf48d88bd">Surveillance for arboviruses in birds in captivity in the Netherlands, 2016-2022</a></h4>
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1522?key=d66d1a4c-64ee-4343-aa07-de67e771f67d">Surveillance for arboviruses in free ranging live birds in the Netherlands, 2016-2022</a></h4>
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1523?key=dfe9760f-c10e-48e5-8f81-22a49662674a">Surveillance for arboviruses in free ranging dead birds in the Netherlands, 2016-2022</a></h4>
+	<h4><a href="https://www.european-virus-archive.com/virus/usuv-strix-nebuloasa-netherlands-2016">USUV, Strix nebuloasa, Netherlands 2016 | EVAg (european-virus-archive.com)</a></h4>
+	<h4><a href="https://www.european-virus-archive.com/virus/usuv-turdus-merula-netherlands-2016">USUV, Turdus merula Netherlands 2016 | EVAg (european-virus-archive.com)</a></h4>
+	<h4><a href="https://www.european-virus-archive.com/virus/west-nile-virus-animal-human-2020-netherlands-emcwnv20tv2584nl">West Nile virus, Animal Human, 2020, Netherlands, EMC/WNV/20TV2584/NL | EVAg (european-virus-archive.com)</a></h4>
 	<br>
 	<br>
 	<!-- <ul>
