--- a/src/pages/samples.html
+++ b/src/pages/samples.html
@@ -12,17 +12,23 @@
 	<br>
 	<br>
 	<br>
-	<h3>Introduction arboviruses in wild birds</h3>
-	<p>Surveillance for arboviruses in birds in the Netherlands, 2016-2022. Content Overview: Information on date and location of sampling, birds species and molecular and serological testing results for Usutu virus (USUV) and (WNV).</p>
+	<h3>Introduction samples</h3>
+	<p>Content Overview: A list of 30495 samples of wild birds categorized by swabs, feathers and sera. Locations and age are available upon request, as are USUV and WNV (serology and molecular) test results. We also have longitudinal samples of the same males, also upon request. </p>
 
 	<!-- empty <p>At auctor urna nunc id cursus metus. Cursus vitae congue mauris rhoncus aenean. Condimentum vitae sapien pellentesque habitant. Rhoncus dolor purus non enim praesent elementum facilisis. Mattis ullamcorper velit sed ullamcorper morbi tincidunt ornare. Cursus euismod quis viverra nibh cras pulvinar mattis nunc sed. Ante metus dictum at tempor commodo ullamcorper. Cursus euismod quis viverra nibh cras pulvinar. Eu tincidunt tortor aliquam nulla facilisi cras fermentum. Augue lacus viverra vitae congue eu. Pellentesque dignissim enim sit amet venenatis urna. Purus faucibus ornare suspendisse sed nisi lacus. Mauris a diam maecenas sed enim ut sem.</p>-->
 <br>
 	<h4>Available Data</h2>
 	
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1505?key=4d19e4bf-bacf-4e47-b4a1-8d1cf48d88bd">Surveillance for arboviruses in birds in captivity in the Netherlands, 2016-2022</a></h4>
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1522?key=d66d1a4c-64ee-4343-aa07-de67e771f67d">Surveillance for arboviruses in free ranging live birds in the Netherlands, 2016-2022</a></h4>
-	<h4><a href="https://www.ebi.ac.uk/biostudies/studies/S-BSST1523?key=dfe9760f-c10e-48e5-8f81-22a49662674a">Surveillance for arboviruses in free ranging dead birds in the Netherlands, 2016-2022</a></h4>
+	<h4><a href="BIOSTUDIES LINK TO SAMPLES">Wildbird swabs|feathers|sera 2016-2024 biobank nov 2024</a></h4>
 	<br>
+	
+	      <div class="vf-component__container">
+        <a label="Share new pathogens data" [routerLink]="['/submit-data']" class="vf-box vf-box--is-link vf-box--normal vf-u-background-color--red--dark" href="mailto:info@pathogensportal.nl">
+          <h3 class="vf-box__heading">Request samples ></h3> 
+          <p class="vf-box__text vf-text-body--2">More data is available upon request, please contact our team ></p>
+        </a>
+      </div>
+	  
 	<br>
 	<!-- <ul>
 		<li>Et tortor consequat id porta</li>
